2022-10-15  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/e.tmac (2c, 1c): Throw diagnostic if changing columnation
	with a footnote pending.  This isn't necessarily an error per
	se, but it many cases it will flag an undesirable page layout
	due to the limited flexibility of me(7)'s footnote support at
	present.  See <https://savannah.gnu.org/bugs/?63176>.

2022-10-14  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/eqn/main.cpp: Fix code style nits.
	(usage): Align output with man page.  Document separate
	invocation modes separately.
	(main): Use standard C library symbols `EXIT_SUCCESS` and
	`EXIT_FAILURE` with `exit()` calls instead of integer literals.
	Replace `assert(0)` call with communicative predicate.  Check
	return value of `fclose()`, and exit with fatal error if it
	fails.  Distinguish `ferror()` status and `fflush(stdout)`
	failures when cleaning up before exit.

2022-10-12  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (read_color_draw_node): Clarify
	diagnostic.

2022-10-10  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/dvi.tmac: Always render \[aq] as a neutral apostrophe.
	Thanks to the TC fonts, we can do this even when the default CM
	text fonts are in use.

	Fixes <https://savannah.gnu.org/bugs/?63200>.

2022-10-10  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/ec.tmac: Remove apparently unnecessary remappings of
	styles (and reassertion of style slots in the font mounting
	position list, albeit in an unusual order (RBI instead of RIB)).
	This code frustrated the rendering of man pages with post-1.22.4
	groff for the 'dvi' output device when using EC fonts.  Instead
	remap the T and H family typefaces in all four styles
	explicitly.  (The CW and CWI faces were already handled.)  Also
	add remappings of groff+PostScriptish font names "CB" and "CBI"
	to CW EC faces of normal weight, corresponding to dvi.tmac; see